2008-05-13  chris fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin

        <rdar://problem/4780592> WebKit application has its window announced as HTML content

        * WebCoreSupport/WebViewFactory.mm:
        (-[WebViewFactory AXWebAreaText]):

2008-05-13  Timothy Hatcher  <timothy@apple.com>

        Fixes a crash seen in Xcode where CallUIDelegateReturningBoolean
        was referencing a nil WebView under validateUserInterfaceItem.
        The validateUserInterfaceItem methods was being called at a time
        when the WebHTMLView is being torndown.

        <rdar://problem/5806229> A crash occurs at CallUIDelegateReturningBoolean()
        while mousing down on menu bar after Xcode News window is opened

        Reviewed by Ada Chan.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView validateUserInterfaceItem:]): NULL check the WebView and
        return NO when it is nil. Adds a comment.
        * WebView/WebPDFView.mm:
        (-[WebPDFView validateUserInterfaceItem:]): Ditto.

2008-05-13  Mark Rowe  <mrowe@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/5926425> HIWebViewCreateWithClass declared as API in HIWebView.h but never exported from WebKit.framework

        * Carbon/HIWebView.h: Remove HIWebViewCreateWithClass.
        * Carbon/HIWebView.m: Ditto.
        (HIWebViewCreate):
        (HIWebViewConstructor):

2008-05-12  Dan Bernstein  <mitz@apple.com>

        Reviewed by Ada Chan.

        - WebKit/mac changes for https://bugs.webkit.org/show_bug.cgi?id=17097
          <rdar://problem/5715471> CGFontRefs (and HFONTs on Windows) leak because FontCache grows without bound

        Added font cache statistics and a function to purge inactive font data.

        * Misc/WebCoreStatistics.h:
        * Misc/WebCoreStatistics.mm:
        (+[WebCoreStatistics cachedFontDataCount]):
        (+[WebCoreStatistics cachedFontDataInactiveCount]):
        (+[WebCoreStatistics purgeInactiveFontData]):